--- a/public/css/app.css
+++ b/public/css/app.css
@@ -515,6 +515,9 @@ Ensure the default browser behavior of the `hidden` attribute.
 .grid-rows-4 {
   grid-template-rows: repeat(4, minmax(0, 1fr));
 }
+.grid-rows-1 {
+  grid-template-rows: repeat(1, minmax(0, 1fr));
+}
 .flex-col {
   flex-direction: column;
 }
